--- a/IMchat/app/build.gradle
+++ b/IMchat/app/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.roughike:bottom-bar:2.3.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
