--- a/IMchat/app/build.gradle
+++ b/IMchat/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
