--- a/IMchat/build.gradle
+++ b/IMchat/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.anko_version='0.10.8'
+    ext.recyclerview_version = '1.0.0'
     repositories {
         google()
         jcenter()
